--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-paper": "^5.10.6",
     "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
     "yup": "^1.3.1"
   },
   "devDependencies": {
