--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "react-hook-form": "^7.46.2",
     "react-native": "0.72.5",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-paper": "^5.10.6",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
@@ -35,6 +34,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/expo": "^33.0.1",
     "@types/react": "~18.2.14",
     "typescript": "^5.1.3"
   },
